# electronics_repair

./: .env  .gitignore  main.py  pyproject.toml
api/: about.py  clients.py  tickets.py
core/: config.py  database.py
models/: client.py
schemas/: client_schema.py  ticket_schema.py
templates/: about.html  base.html
